improved UI of several activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,7 @@
         Easy: 70 sec \n
         Medium: 60 sec \n
         Hard: 50 sec \n
-        Insane: 40 sec \n
-        Random: 60 sec \n \n
+        Insane: 40 sec \n \n
         Also, the words will keep getting harder. Do you got what it takes
         to become the next rhyme master? Good luck!
     </string>
